--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,19 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <h1>Sharon Kim's Portfolio</h1>
+    <h1>Sharon Kim's Contact Page</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Main Page</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Main Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio Page</a>
+              <a class="nav-link" href="portfolio.html">Portfolio Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#" aria-current="page">Contact Page</a>
+              <a class="nav-link active" href="contact.html" aria-current="page">Contact Page</a>
             </li>
           </ul>
         </div>
