--- a/portfolio.html
+++ b/portfolio.html
@@ -8,26 +8,26 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Sharon's Portfolio</title>
+    <title>Sharon's Portfolio Page</title>
   </head>
   <body>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <h1>Sharon Kim's Portfolio</h1>
+    <h1>Sharon Kim's Portfolio Page</h1>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Main Page</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Main Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio Page</a>
+              <a class="nav-link" href="portfolio.html">Portfolio Page</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#" aria-current="page">Contact Page</a>
+              <a class="nav-link active" href="contact.html" aria-current="page">Contact Page</a>
             </li>
           </ul>
         </div>
