--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Sharon Kim</title>
+    <title>Sharon Kim's Main Page</title>
   </head>
   <body>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <h1>Sharon Kim</h1>
+    <h1>Sharon's Main Page</h1>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -33,6 +33,11 @@
         </div>
       </div>
     </nav>
+    <main class="container-fluid">
+      <div class="row">
+        <div class="col">Vivamus tempus odio quis tempor tempus. Vestibulum sed auctor nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam mollis neque vitae aliquam lobortis. Proin vel bibendum odio. Nam pharetra volutpat quam, at tristique felis bibendum sit amet. Donec ullamcorper est in metus pellentesque, sit amet dapibus risus dignissim. Nulla ullamcorper ex tortor, sit amet dictum urna lobortis eget. Nulla urna lacus, tempus ut orci a, mattis rutrum libero. Donec sagittis bibendum enim, eu auctor lectus commodo non. Cras ut eros nisl. Nunc aliquam nulla ut feugiat dictum. Vestibulum sed rhoncus metus. Donec vitae justo nec ex iaculis varius. Etiam vel ante sollicitudin, vestibulum ipsum ut, cursus tellus.</div>
+      </div>
+    </main>
 
   </body>
 </html>
