--- a/portfolio.html
+++ b/portfolio.html
@@ -34,5 +34,13 @@
       </div>
     </nav>
 
+    <main class="container-fluid">
+      <h2>Images</h2>
+      <div class="row">
+        <div class="col"><img src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive nature image"></div>
+        <div class="col">col-sm</div>
+        <div class="col">col-sm</div>
+      </div>
+    </main>
   </body>
 </html>
