added contact form

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,9 +37,16 @@
     <main class="container-fluid">
       <h2>Images</h2>
       <div class="row">
-        <div class="col"><img src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive linkedin image"></div>
-        <div class="col"><img src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" class="img-fluid" alt="responsive instagram image"></div>
-        <div class="col">col-sm</div>
+        <div class="col">
+            <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/"> 
+              <img src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive linkedin image">
+            </a>
+        </div>
+        <div class="col">
+          <a href="https://www.instagram.com/sharonkim97/?hl=en">
+            <img src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" class="img-fluid" alt="responsive instagram image">
+          </a>
+        </div>
       </div>
     </main>
   </body>
