added nav toggler

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <h1>Sharon's Main Page</h1>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
+        <a class="navbar-brand" href="#">Sharon Kim's Site</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -35,10 +38,10 @@
       </div>
     </nav>
     <main class="container-fluid">
-      <h2>Title</h2>
+      <h2>Introduction</h2>
       <div class="row">
-        <div class="col"><img src="./assets/anshul-jain-jRzmGztv3LY-unsplash.jpg" class="img-fluid" alt="responsive nature image"></div>
-        <div class="col">Vivamus tempus odio quis tempor tempus. Vestibulum sed auctor nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam mollis neque vitae aliquam lobortis. Proin vel bibendum odio. Nam pharetra volutpat quam, at tristique felis bibendum sit amet. Donec ullamcorper est in metus pellentesque, sit amet dapibus risus dignissim. Nulla ullamcorper ex tortor, sit amet dictum urna lobortis eget. Nulla urna lacus, tempus ut orci a, mattis rutrum libero. Donec sagittis bibendum enim, eu auctor lectus commodo non. Cras ut eros nisl. Nunc aliquam nulla ut feugiat dictum. Vestibulum sed rhoncus metus. Donec vitae justo nec ex iaculis varius. Etiam vel ante sollicitudin, vestibulum ipsum ut, cursus tellus. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada velit in pellentesque finibus. Aliquam vitae pellentesque risus, sed faucibus ligula. Curabitur efficitur nisl sit amet mauris maximus auctor. Vivamus blandit ligula at augue bibendum, at maximus enim pellentesque. Proin sit amet est dignissim libero rutrum iaculis. Vestibulum metus felis, faucibus sed luctus nec, volutpat vel risus. Nulla eu semper urna. Curabitur non justo non eros gravida egestas. Aenean sit amet consectetur augue, nec fermentum eros. Nulla in urna et massa facilisis imperdiet. Nullam ac vulputate lectus. Quisque nec elementum ante. Sed odio purus, scelerisque at sem non, ornare tempus arcu. Etiam ut congue tortor.</div>
+        <div class="col"><img class="images" src="./assets/Sharon Kim.JPG" class="img-fluid" alt="responsive nature image"></div>
+        <div class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</div>
       </div>
     </main>
 
