--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,15 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Sharon Kim's Site</a>
+        <!--Navigation Bar Toggler-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- I think this is what makes it responsive too-->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -40,15 +43,21 @@
 
     <main class="container-fluid">
       <h2>Portfolio</h2>
+      <!--I made 3 columns within 1 row-->
       <div class="row">
         <div class="col">
             <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/"> 
-              <img class="images" src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive linkedin image">
+              <img class="portfolioimages" src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive linkedin image">
             </a>
         </div>
         <div class="col">
           <a href="https://www.instagram.com/sharonkim97/?hl=en">
-            <img class="images" src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" class="img-fluid" alt="responsive instagram image">
+            <img class="portfolioimages" src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" class="img-fluid" alt="responsive instagram image">
+          </a>
+        </div>
+        <div class="col">
+          <a href="https://github.com/skimmers/hw1-code-refactor/deployments/activity_log?environment=github-pages">
+            <img class="portfolioimages" src="./assets/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="img-fluid" alt="responsive coding image">
           </a>
         </div>
       </div>
