--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,17 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Sharon Kim's Site</a>
+        <!--Navigation Toggler-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!--Listing all the page options-->
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Main Page</a>
             </li>
@@ -38,6 +41,7 @@
       </div>
     </nav>
 
+    <!--Contact Form-->
     <main class="container-fluid">
       <div class="row">
         <div class="col">
