--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sharon Kim's Site</a>
+        <a class="navbar-brand" href="index.html">Sharon Kim's Site</a>
+        <!--Navigation Toggler-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,10 +39,11 @@
         </div>
       </div>
     </nav>
+    <!--Made 2 columns in 1 row-->
     <main class="container-fluid">
       <h2>Introduction</h2>
       <div class="row">
-        <div class="col"><img class="images" src="./assets/Sharon Kim.JPG" class="img-fluid" alt="responsive nature image"></div>
+        <div class="col"><img class="mainimages" src="./assets/Sharon Kim.JPG" class="img-fluid" alt="responsive nature image"></div>
         <div class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</div>
       </div>
     </main>
