--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--Navigation Bar-->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sharon Kim's Site</a>
+        <a class="navbar-brand" href="index.html">Sharon Kim's Site</a>
         <!--Navigation Bar Toggler-->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
