--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="container-fluid">
       <h2>Introduction</h2>
       <div class="row">
-        <div class="col"><img class="mainimages" src="./assets/Sharon Kim.JPG" class="img-fluid" alt="responsive nature image"></div>
+        <div class="col"><img class="mainimages" src="./assets/sharon_kim.JPG" class="img-fluid" alt="responsive nature image"></div>
         <div class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</div>
       </div>
     </main>
