--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
           <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Name:</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
             </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email address:</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
             </div>
             <div class="form-group">
-              <label for="exampleFormControlTextarea1">Example textarea:</label>
+              <label for="exampleFormControlTextarea1">Example text area:</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
           </form>
