fixed validation errors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <!--Navigation Bar-->
+    
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Sharon Kim's Site</a>
@@ -43,8 +44,12 @@
     <main class="container-fluid">
       <h2>Introduction</h2>
       <div class="row">
-        <div class="col"><img class="mainimages" src="./assets/sharon_kim.JPG" class="img-fluid" alt="responsive nature image"></div>
-        <div class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</div>
+        <section class="col">
+          <div class="img-fluid">
+            <img class="mainimages" src="./assets/sharon_kim.JPG" alt="responsive nature image">
+          </div>
+        </section>
+        <section class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</section>
       </div>
     </main>
 
