--- a/portfolio.html
+++ b/portfolio.html
@@ -46,19 +46,25 @@
       <!--I made 3 columns within 1 row-->
       <div class="row">
         <div class="col">
-            <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/"> 
-              <img class="portfolioimages" src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" class="img-fluid" alt="responsive linkedin image">
+            <div class="img-fluid">
+              <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/"> 
+                <img class="portfolioimages" src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" alt="responsive linkedin image">
+              </a>
+            </div>
+        </div>
+        <div class="col">
+          <div class="img-fluid">
+            <a href="https://www.instagram.com/sharonkim97/?hl=en">
+              <img class="portfolioimages" src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" alt="responsive instagram image">
             </a>
+          </div>
         </div>
         <div class="col">
-          <a href="https://www.instagram.com/sharonkim97/?hl=en">
-            <img class="portfolioimages" src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" class="img-fluid" alt="responsive instagram image">
-          </a>
-        </div>
-        <div class="col">
-          <a href="https://github.com/skimmers/hw1-code-refactor/deployments/activity_log?environment=github-pages">
-            <img class="portfolioimages" src="./assets/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" class="img-fluid" alt="responsive coding image">
-          </a>
+          <div class="img-fluid">
+            <a href="https://github.com/skimmers/hw1-code-refactor/deployments/activity_log?environment=github-pages">
+              <img class="portfolioimages" src="./assets/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="responsive coding image">
+            </a>
+          </div>
         </div>
       </div>
     </main>
