--- a/portfolio.html
+++ b/portfolio.html
@@ -33,37 +33,34 @@
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio Page</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contact.html" aria-current="page">Contact Page</a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <main class="container-fluid">
+    <main>
       <h2>Portfolio</h2>
-      <!--I made 3 columns within 1 row-->
       <div class="row">
-        <div class="col">
-            <div class="img-fluid">
-              <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/"> 
-                <img class="portfolioimages" src="./assets/inlytics-linkedin-analytics-tool-Z7MNWch3LPs-unsplash.jpg" alt="responsive linkedin image">
-              </a>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">The Password Generator</h5>
+              <img class="card-img-top" src="./assets/Password_Generator.png" alt="Image of Application ">
+              <p class="card-text">This is an application that can generate any password for you. I used HTML, CSS, and JavaScript for this application.</p>
+              <a href="https://skimmers.github.io/password_generator/" class="btn btn-primary">Application Link</a>
+              <a href="https://github.com/skimmers/password_generator/deployments/activity_log?environment=github-pages" class="btn btn-primary">GitHub</a>
             </div>
-        </div>
-        <div class="col">
-          <div class="img-fluid">
-            <a href="https://www.instagram.com/sharonkim97/?hl=en">
-              <img class="portfolioimages" src="./assets/neonbrand-nZJBt4gQlKI-unsplash.jpg" alt="responsive instagram image">
-            </a>
           </div>
         </div>
-        <div class="col">
-          <div class="img-fluid">
-            <a href="https://github.com/skimmers/hw1-code-refactor/deployments/activity_log?environment=github-pages">
-              <img class="portfolioimages" src="./assets/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="responsive coding image">
-            </a>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">The Code Quiz</h5>
+              <img class="card-img-top" src="./assets/Code_Quiz.png" alt="Image of Application">
+              <p class="card-text">I created a code quiz with HTML, CSS, and JavaScript. Please test your coding knowledge by taking my timed quiz!</p>
+              <a href="https://skimmers.github.io/code_quiz/" class="btn btn-primary">Application Link</a>
+              <a href="https://github.com/skimmers/code_quiz" class="btn btn-primary">GitHub</a>
+            </div>
           </div>
         </div>
       </div>
