--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
 
-    <title>Sharon Kim's Main Page</title>
+    <title>Sharon Kim's Portfolio</title>
   </head>
   <body>
 
@@ -33,24 +33,39 @@
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio Page</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contact.html" aria-current="page">Contact Page</a>
-            </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!--Made 2 columns in 1 row-->
-    <main class="container-fluid">
+    
+    <main>
+      <div class="card mb-3">
       <h2>Introduction</h2>
-      <div class="row">
-        <section class="col">
-          <div class="img-fluid">
-            <img class="mainimages" src="./assets/sharon_kim.JPG" alt="responsive nature image">
-          </div>
-        </section>
-        <section class="col"> Hello, my name is Sharon and I'm a marketing professional at a NYC law firm. I am currently trying to increase my skillset by taking a coding bootcamp. I'm hoping to code my own blog one day. <br> <br> Please check out my other pages. Thank you!</section>
+      <p> Hello, my name is Sharon Kim and I'm a marketing professional at a NYC law firm. I am currently working towards becoming a well rounded full stack web developer. To check out my work, please check my portfolio page. Thank you!</p>  
       </div>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Contact Info</h5>
+              <p class="card-text"><br> Email: kim.mi.sharon@gmail.com <br> Mobile: 478 414 8614</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Relevant Links</h5>
+              <p class="card-text">Please find my career materials linked below.</p>
+              <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/" class="btn btn-primary">LinkedIn</a>
+              <a href="https://github.com/skimmers" class="btn btn-primary">GitHub</a>
+              <a href="https://www.canva.com/design/DAEV-2LdO0A/xwyYfklHwigKUNMNE-8s0w/view?utm_content=DAEV-2LdO0A&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="btn btn-primary">My Resume</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
   </body>
