updated portfolio page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Main Page</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio Page</a>
             </li>
           </ul>
@@ -58,9 +55,9 @@
             <div class="card-body">
               <h5 class="card-title">Relevant Links</h5>
               <p class="card-text">Please find my career materials linked below.</p>
-              <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/" class="btn btn-primary">LinkedIn</a>
-              <a href="https://github.com/skimmers" class="btn btn-primary">GitHub</a>
-              <a href="https://www.canva.com/design/DAEV-2LdO0A/xwyYfklHwigKUNMNE-8s0w/view?utm_content=DAEV-2LdO0A&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" class="btn btn-primary">My Resume</a>
+              <a href="https://www.linkedin.com/in/sharon-kim-0a33a8137/" target="_blank" class="btn btn-primary">LinkedIn</a>
+              <a href="https://github.com/skimmers" target="_blank" class="btn btn-primary">GitHub</a>
+              <a href="https://www.canva.com/design/DAEV-2LdO0A/xwyYfklHwigKUNMNE-8s0w/view?utm_content=DAEV-2LdO0A&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank" class="btn btn-primary">My Resume</a>
             </div>
           </div>
         </div>
