--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     </nav>
     
     <main>
-      <div class="card mb-3">
+      <div class="card mb-3 boxes">
       <h2>Introduction</h2>
-      <p> Hello, my name is Sharon Kim and I'm a marketing professional at a NYC law firm. I am currently working towards becoming a well rounded full stack web developer. To check out my work, please check my portfolio page. Thank you!</p>  
+      <p> Hello, my name is Sharon Kim and I'm a marketing professional with extensive work experience. I am currently working towards becoming a well rounded full stack web developer. To check out my work, please see my portfolio page. Thank you!</p>  
       </div>
 
       <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col-sm-6 ">
+          <div class="card boxes">
             <div class="card-body">
               <h5 class="card-title">Contact Info</h5>
               <p class="card-text"><br> Email: kim.mi.sharon@gmail.com <br> Mobile: 478 414 8614</p>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card">
+          <div class="card boxes">
             <div class="card-body">
               <h5 class="card-title">Relevant Links</h5>
               <p class="card-text">Please find my career materials linked below.</p>
